--- a/css/reviews.scss
+++ b/css/reviews.scss
@@ -3,6 +3,30 @@
     padding: 2.625rem 2.4375rem 2.125rem;
 }
 
+.reviews__list {
+    position: relative;
+    min-height: 280px;
+}
+
+.reviews__item {
+    top: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+    opacity: 0;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+}
+
+.reviews__item.active {
+    position: static;
+    opacity: 1;
+    pointer-events: unset;
+}
+
 .reviews__display-inner {
     display: flex;
 
