--- a/css/main.css
+++ b/css/main.css
@@ -577,6 +577,30 @@ img {
   padding: 2.625rem 2.4375rem 2.125rem;
 }
 
+.reviews__list {
+  position: relative;
+  min-height: 280px;
+}
+
+.reviews__item {
+  top: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  opacity: 0;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+
+.reviews__item.active {
+  position: static;
+  opacity: 1;
+  pointer-events: unset;
+}
+
 .reviews__display-inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -652,19 +676,20 @@ img {
   padding-left: 1.25rem;
 }
 
-.reviews__switcher-item {
+.reviews-switcher__item {
   width: 5rem;
   height: 5rem;
   border: 0.375rem solid transparent;
   border-radius: 50%;
   overflow: hidden;
   position: relative;
+  cursor: pointer;
 }
-.reviews__switcher-item--active {
+.reviews-switcher__item--active {
   border-color: #FEDB3F;
 }
 
-.reviews__switcher-item__link {
+.reviews-switcher__link {
   position: absolute;
   top: 0;
   left: 0;
@@ -673,7 +698,7 @@ img {
   display: block;
 }
 
-.reviews__switcher-item__img {
+.reviews-switcher__img {
   display: block;
   width: 100%;
   height: 100%;
