--- a/css/form.scss
+++ b/css/form.scss
@@ -82,3 +82,40 @@
         justify-content: center;
     }
 }
+
+.modal {
+    display: none;
+
+    &.error-modal {
+        .modal__content {
+            color: red;
+        }
+    }
+
+    /*&.fancybox-content {
+        padding: 0 !important;
+    }*/
+
+    /*.fancybox-button {
+        display: none;
+    }*/
+}
+
+.modal__container {
+    background: white;
+    padding: 47px 60px;
+    width: 300px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal__content {
+    margin-bottom: 15px;
+    color: black;
+}
+
+.input-error {
+    border-color: red;
+}
