--- a/css/main.css
+++ b/css/main.css
@@ -813,6 +813,45 @@ img {
   }
 }
 
+.modal {
+  display: none;
+  /*&.fancybox-content {
+      padding: 0 !important;
+  }*/
+  /*.fancybox-button {
+      display: none;
+  }*/
+}
+.modal.error-modal .modal__content {
+  color: red;
+}
+
+.modal__container {
+  background: white;
+  padding: 47px 60px;
+  width: 300px;
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal__content {
+  margin-bottom: 15px;
+  color: black;
+}
+
+.input-error {
+  border-color: red;
+}
+
 .radio {
   display: -webkit-box;
   display: -ms-flexbox;
