--- a/css/slider.scss
+++ b/css/slider.scss
@@ -1,14 +1,74 @@
 .slider__all {
     display: flex;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    left: 0px;
+    transition: .5s;
+
+    @include tablets {
+        /*display: block;*/
+        display: flex;
+        width: 100%;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        text-align: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+}
+
+.slider__item {
+    display: flex;
+    flex-shrink: 0;
+    width: 100%;
+
+    @include tablets {
+    /* display: block; */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    }
+}
+
+.slaider__img {
+    max-width: none !important;
+
+    @include tablets {
+        /*margin-left: 13%;*/
+    }
 }
 
 .slider__inner {
-    width: 45%;
+    /*width: 45%;*/
 }
 
 .slaider__param {
     margin-bottom: 1.875rem;
+
+    @include tablets {
+        display: none;
+    }
 }
+
+/*.slaider__content {
+    @include tablets {
+        text-align: center;
+        margin-left: 87px;
+        width: 559px;
+    }
+}*/
 
 .slider__title {
     font-size: 2.5rem;
@@ -16,6 +76,9 @@
     margin-bottom: 1.75rem;
     text-transform: uppercase;
 
+    @include tablets {
+        text-align: center;
+    }
 }
 
 .slaider__desc {
@@ -27,6 +90,10 @@
 
 .slider__tech {
     display: flex;
+
+    @include tablets {
+        display: inline-flex;
+    }
 }
 
 .tech__dl {
@@ -51,6 +118,10 @@
 
 .slider__cust {
     display: flex;
+
+    @include tablets {
+        display: inline-flex;
+    }
 }
 
 .slider__price {
@@ -63,3 +134,43 @@
 .slider__btn {
     margin-top: 1.125rem;
 }
+
+//////
+/* DIRECTION CONTROLS (NEXT / PREV) */
+.bx-wrapper .bx-prev {
+    left: -30px;
+    background: url('https://rudanastasia.github.io/surfboard/img/icons/left.png') no-repeat 0 -5px;
+
+    @include tablets {
+        left: -4px;
+    }
+  }
+  .bx-wrapper .bx-prev:hover,
+  .bx-wrapper .bx-prev:focus {
+    background-position: 0 0;
+  }
+  .bx-wrapper .bx-next {
+    right: -30px;
+    background: url('https://rudanastasia.github.io/surfboard/img/icons/right.png') no-repeat 0 0px;
+
+    @include tablets {
+        right: -4px;
+    }
+  }
+  .bx-wrapper .bx-next:hover,
+  .bx-wrapper .bx-next:focus {
+    background-position: -43px 0;
+  }
+  .bx-wrapper .bx-controls-direction a {
+    position: absolute;
+    top: 50%;
+    margin-top: -16px;
+    outline: 0;
+    width: 32px;
+    height: 32px;
+    text-indent: -9999px;
+    z-index: 9999;
+  }
+  .bx-wrapper .bx-controls-direction a.disabled {
+    display: none;
+  }
