--- a/css/main.css
+++ b/css/main.css
@@ -442,7 +442,7 @@ img {
   }
 }
 
-.map-section {
+.section.map-section {
   width: 100%;
 }
 
@@ -1051,6 +1051,7 @@ img {
   font-size: 36px;
   line-height: 72px;
   text-align: center;
+  font-weight: 400;
 }
 .menu__burger__link:hover {
   color: #FFD517;
@@ -1058,8 +1059,8 @@ img {
 
 .modal__close {
   position: absolute;
-  right: 100px;
-  top: 100px;
+  right: 20px;
+  top: 30px;
 }
 
 .slider__all {
@@ -1546,4 +1547,121 @@ img {
     width: 64%;
     margin-left: 0px;
   }
+}
+
+.player-section {
+  background: #F8FAF9;
+  margin-bottom: 0;
+}
+
+.player {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  /*&.active .player__splash {
+      display: none;
+  }*/
+  /*&.paused {
+      .player__start {
+          width: 14px;
+          height: 22px;
+          border: none;
+
+          &:after,
+          &:before {
+              content: "";
+              display: block;
+              position: absolute;
+              width: 5px;
+              top: 0;
+              bottom: 0;
+              background: #626262;
+          }
+
+          &:after {
+              right: 0;
+          }
+
+          &:before {
+              left: 0;
+          }
+      }
+  }*/
+}
+
+.player__splash {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  cursor: pointer;
+}
+
+.player__controls {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 35px;
+  background: #404040;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 25px;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-align: center;
+      align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-box-align: center;
+}
+
+.player__start {
+  /*border: 0;
+  background: transparent;
+  box-sizing: border-box;
+  width: 0;
+  height: 74px;
+
+  border-color: transparent transparent transparent #FFFFFF;
+  transition: 100ms all ease;
+  cursor: pointer;
+
+  // play state
+  border-style: solid;
+  border-width: 37px 0 37px 60px;*/
+  display: inline-block;
+  border: 12px solid transparent;
+  border-left: 19px solid white;
+  background: transparent;
+}
+.player__start.paused {
+  border-style: double;
+  border-width: 0px 0 0px 60px;
+}
+.player__start:hover {
+  border-color: transparent transparent transparent #FFFFFF;
+}
+
+.player__playback {
+  background-color: #626262;
+  height: 9px;
+  width: 702px;
+}
+
+.player__playback-button {
+  border-radius: 50px;
+  border: none;
+  width: 12px;
+  height: 12px;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background: #626262;
+  margin-left: 90px;
 }
