--- a/css/form.scss
+++ b/css/form.scss
@@ -83,39 +83,165 @@
     }
 }
 
-.modal {
+.modale {
     display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: #333537;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: .5s;
 
-    &.error-modal {
-        .modal__content {
+    &.error-modale {
+        .modale__content {
             color: red;
         }
     }
 
-    /*&.fancybox-content {
+    &.fancybox-content {
         padding: 0 !important;
-    }*/
+    }
 
-    /*.fancybox-button {
+    .fancybox-button {
         display: none;
-    }*/
+    }
 }
 
-.modal__container {
-    background: white;
-    padding: 47px 60px;
-    width: 300px;
-    height: 200px;
+.modale-open {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
-.modal__content {
-    margin-bottom: 15px;
+.modale__container {
+    background: white;
+    padding: 60px;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    max-width: 450px;
+    text-align: center;
+    line-height: 24px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.modale__content {
+    margin-bottom: 20px;
     color: black;
+}
+
+.modale__button-container {
+    margin-top: 42px;
 }
 
 .input-error {
     border-color: red;
 }
+
+.open-modale {
+    width: max-content;
+    cursor: pointer;
+}
+
+.modale_opened {
+    opacity: 1;
+    z-index: 10;
+}
+
+.body_closed {
+    height: 100%;
+    overflow: hidden;
+}
+
+/*#myBtn {
+    background-color: #9C27B0;
+    color: white;
+    padding: 12px 16px;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    width: 180px;
+  }*/
+  
+  
+  .modale {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      padding-top: 100px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: #333537;
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  
+  .modal-content {
+      position: relative;
+      background-color: white;
+      margin: auto;
+      padding: 21px;
+      width: 50%;
+      height: 170px;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+      -webkit-animation-name: animatetop;
+      -webkit-animation-duration: 0.4s;
+      animation-name: animatetop;
+      animation-duration: 0.4s;
+      margin-bottom: 20px;
+      color: black;
+  }
+  
+  
+  @-webkit-keyframes animatetop {
+      from {top:-300px; opacity:0} 
+      to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+      from {top:-300px; opacity:0}
+      to {top:0; opacity:1}
+  }
+  
+  
+  .close {
+      color: white;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+  }
+  
+  .modal-header {
+      padding: 2px 16px;
+      color: white;
+  }
+  
+  .modal-body {padding: 2px 16px;}
+  
+  .modal-footer {
+      padding: 2px 16px;
+      background-color: #9C27B0;
+      color: white;
+  }
